# hsaoc

./: README.md  flake.nix  hsaoc.cabal  scripts.nix
app/: Main.hs
src/: Core.hs
test/: Main.hs  Test.hs
