cabal-version: 2.2
name:          hsaoc
version:       0.0.0.0

-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:    Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts
  default-extensions:
    GADTs
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TupleSections
    TypeApplications

  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , async
    , base
    , binary
    , bytestring
    , containers
    , foldl
    , megaparsec
    , primitive
    , safe-exceptions
    , text
    , unordered-containers
    , vector

  -- Codecs
  -- Parallelism
  -- Mutability
  -- Binary
  -- Containers
  -- Utilities
  default-language:   Haskell2010

library
  import:          common-opts
  exposed-modules: Core
  hs-source-dirs:  src

executable hsaoc
  import:          common-opts
  main-is:         Main.hs
  exposed-modules: Main
  hs-source-dirs:  app
  build-depends:
    , directory
    , filepath
    , hsaoc
    , process

test-suite test
  import:         common-opts
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  hs-source-dirs: test
  build-depends:
    , hedgehog
    , hsaoc
    , hspec
    , hspec-expectations
    , hspec-hedgehog
    , QuickCheck
